# rm2

./: Cargo.toml
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
