[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true, features = ["full"]}
interprocess = {workspace = true}
shared = {path = "../shared"}
homedir = "0.2.1"
thiserror.workspace = true
serde.workspace = true
cond = "1.0.5"
