[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true, features = ["derive"]}
tokio = {workspace = true}
interprocess = {workspace = true}
thiserror.workspace = true
rmp-serde = "1.3.0"
toml = "0.8.14"
